# rhino-asr

./: Cargo.toml  PLAN.md  README.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  mock.rs  whisper.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  main.rs  sender.rs  stream.rs
crates/client/tests/: session_test.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: audio.rs  control.rs  events.rs  lib.rs  text_buffer.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  pipeline.rs  session.rs
crates/service/tests/: session_integration.rs
crates/vad/: Cargo.toml
crates/vad/src/: gate.rs  lib.rs  silero.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  main.rs  ws.rs
crates/web/static/: app.js  audio-worklet.js  index.html  style.css
crates/web/tests/: websocket_test.rs
