[package]
name = "rhino-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
whisper = ["rhino-backend/whisper"]
cuda = ["rhino-backend/cuda"]
silero = ["rhino-vad/silero"]

[dependencies]
rhino-protocol.workspace = true
rhino-backend.workspace = true
rhino-vad.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
velo.workspace = true
loom-rs.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio-util.workspace = true

# Binary-only deps (kept unconditional for simplicity)
velo-transports.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "rhino-server"
path = "src/bin/server.rs"
